<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nombre_app">Acceso WebService</string>
    <string name="operaciones_servicio_web">Operaciones Servicio Web</string>
    <string name="configurar_conexion">Configurar conexión</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="equipo">Equipo</string>
    <string name="texto_progreso">Procesando petición&#8230;</string>
    <string name="errorHTTP">Error en el acceso al servicio</string>
    <string name="consulta_de_registros">Consulta de Registros</string>
    <string name="insercion_de_registro">Inserción de Registro</string>
    <string name="modificacion_de_registro">Modificación de Registro</string>
    <string name="borrado_de_registro">Borrado de Registro</string>
    <string name="de">de</string>
    <string name="registro">registro</string>
    <string name="servicio_conectado">Servicio conectado</string>
    <string name="no_se_ha_podido_establecer_la_conexion">No se ha podido establecer la conexión con el servicio. Configure la conexión.</string>

    <!-- Botones (Accesibilidad) -->
    <string name="consultar">Consultar</string>
    <string name="insertar">Insertar</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="primero">Primero</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="ultimo">Último</string>

    <!-- Textos Toast -->
    <string name="registro_existente">Registro existente</string>
    <string name="registro_no_existente">Registro no existente</string>
    <string name="debe_introducir_dni">Debe introducir un DNI</string>
    <string name="consulta_finalizada">Consulta finalizada</string>
    <string name="insercion_realizada">Inserción realizada</string>
    <string name="insercion_cancelada">Inserción cancelada</string>
    <string name="borrado_realizado">Borrado realizado</string>
    <string name="borrado_cancelado">Borrado cancelado</string>
    <string name="actualizacion_realizada">Actualización realizada</string>
    <string name="actualizacion_cancelada">Actualización cancelada</string>

    <!-- Preferencias -->
    <string name="datos_conectividad">Datos de conectividad</string>
    <string name="url_servidor">URL Servidor</string>
    <string name="descripcion_url_servidor">Dirección del servidor al que se realizará la conexión</string>
    <string name="usuario">Usuario</string>
    <string name="descripcion_usuario">Usuario que realizará la conexión</string>
    <string name="palabra_clave">Palabra clave</string>
    <string name="descripcion_palabra_clave">Clave del usuario que realizará la conexión</string>
    <string name="title_activity_inicial">Inicial</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
