<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/insercion_de_registro"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editDNIAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dni"
            android:enabled="false" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editNombreAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editApellidosAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editDireccionAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editTelefonoAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="100dp" />

        <EditText
            android:id="@+id/editEquipoAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equipo" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnAceptarAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="@string/insertar"
            android:background="@android:color/transparent" />
    </LinearLayout>

</LinearLayout>
